# life-as-a-game

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: cli.py  main.py  settings.py
app/authentication/: controller.py  domain.py  handler.py  schemas.py  service.py  typedef.py
app/authorization/: controller.py  domain.py  entities.py  handler.py  repository.py  schemas.py  typedef.py
app/healthcheck/: controller.py
app/roles/: controller.py  domain.py  entities.py  repository.py  schemas.py
app/users/: controller.py  domain.py  entities.py  repository.py  schemas.py
app/utils/: msgspec.py  oas.py
app/utils/cache/: __init__.py  adapter.py  asyncfix.py  config.py
app/utils/database/: __init__.py  adapter.py  config.py  entity.py  repository.py  tables.py
app/utils/database/query/: comparison.py  helpers.py  interface.py  null.py  order_by.py  paginate.py  utils.py  where.py
app/utils/server/: __init__.py  config.py  controller.py  exc_handler.py  exceptions.py  finder.py  logs.py  operation.py  page.py
envs/: example.env  local.container.env  test.env
migrations/: env.py  script.py.mako
migrations/versions/: 0001_create_roles_and_users_tables.py  0001_create_user_table.py  0002_create_admin_role.py  0002_create_roles_table.py  0003_create_group_and_relations_with_roles_.py
tests/: conftest.py  mocks.py  test_authentication.py  test_authorization.py  test_healthcheck.py  test_users.py
